# qemu-avr-twi-i2c

hw/avr/: Kconfig  atmega.c  twi_i2c.h
hw/misc/: Kconfig
rust/: Cargo.toml  wrapper.h
rust/hw/: Kconfig  meson.build
rust/hw/char/: meson.build
rust/hw/i2c/_src/: lib.rs
rust/hw/i2c/twi_i2c/: Cargo.toml  test.toml
rust/hw/i2c/twi_i2c/src/: device.rs  device_class.rs  registers.rs
rust/qemu-api/src/: device_class.rs  vmstate.rs
